infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-app.local  # Change this to your actual domain
      http:
        paths:
          - path: /event-bus
            pathType: Prefix
            backend:
              service:
                name: event-bus-clusterip-srv
                port:
                  number: 4006
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: post-clusterip-srv
                port:
                  number: 4001
